package solid.dip.compliant;

public interface IPrinter {
    public void print(String text);
}
