package solid.dip.compliant2;

public interface IPrinterFactory {
    IPrinter creatPrinter();
}
