' Generated by UML Generator
' Encoded: ZPBBQiCm44Nt-efPfWqsNNjHKYY5B085zmScqZGLjMKp7eSsZtvx9IUA7JUORWIwT-RSqMFH2BAqPQ6QJ-jgP2n15zWqJo9irwtGKbSkjpk21_LX3O6sh0jIggk2vqgt9JbPeSCDCUmLG2Bq9Hda7k0sOL_dn5khAOFbgzU4EAZlgANYxrvyEGd1I_mo7x5dG-nTA41ZthnsRMImhQm9TXsm4JABnb6fBit7qoMwc_lKS9Dsi-ayRzVxevbGpaR8kfpq6A_g_r5NzSEK-LJA-2dkawJtfynux-DpfUbZ3uZJf-dXhzft3Co8dQ8ko1d_-Nu1
' URL: http://www.plantuml.com/plantuml/uml/ZPBBQiCm44Nt-efPfWqsNNjHKYY5B085zmScqZGLjMKp7eSsZtvx9IUA7JUORWIwT-RSqMFH2BAqPQ6QJ-jgP2n15zWqJo9irwtGKbSkjpk21_LX3O6sh0jIggk2vqgt9JbPeSCDCUmLG2Bq9Hda7k0sOL_dn5khAOFbgzU4EAZlgANYxrvyEGd1I_mo7x5dG-nTA41ZthnsRMImhQm9TXsm4JABnb6fBit7qoMwc_lKS9Dsi-ayRzVxevbGpaR8kfpq6A_g_r5NzSEK-LJA-2dkawJtfynux-DpfUbZ3uZJf-dXhzft3Co8dQ8ko1d_-Nu1
' Generated on: 2026-03-19T15:22:58.400699100

@startuml
skinparam classAttributeIconSize 0
hide circle

class DocumentManager {
  -text: String
  -pService: IPrinter
  -factory: IPrinterFactory
  --
  +DocumentManager(text: String)
  +addText(text: String): void
  +printDocument(): void
}

interface IPrinter {
  +print(text: String): void
}

interface IPrinterFactory {
  ~creatPrinter(): IPrinter
}

class Printer {
  +print(text: String): void
}

class PrinterFactory {
  +creatPrinter(): IPrinter
}

DocumentManager *-- IPrinter
DocumentManager *-- IPrinterFactory
IPrinterFactory ..> IPrinter
Printer ..|> IPrinter
PrinterFactory ..|> IPrinterFactory
PrinterFactory ..> IPrinter
@enduml